--- a/HW_2/index.css
+++ b/HW_2/index.css
@@ -1,3 +1,16 @@
 body {
-background-color: gray;
+    background-color: #FFF3B0;
+}
+h2 {
+    color: #9E2A2B;
+}
+img {
+    width: 500px;
+    border: 3 px solid #E09F3E;
+}
+p {
+    color: #540B0E;
+}
+h1 {
+    color: #335C67;
 }
