--- a/HW_2/index.css
+++ b/HW_2/index.css
@@ -1,16 +1,14 @@
 body {
-    background-color: #FFF3B0;
+    background-color: #FFFBFF;
     font-family: 'Roboto', sans-serif;
 }
 h1, h2 {
-    color: #9E2A2B;
+    color: #CE4760;
 }
 img {
-    width: 500px;;
+    width: 500px;
+    border: 10 px;
 }
-p, ul, ol {
-    color: #540B0E;
-}
-a {
-    color: #540B0E;
+p, ul, ol, a {
+    color: #261132;
 }
